==============
lxml changelog
==============

Under development
==================

Bugs fixed
----------

* Work-around for libxml2 bug that can leave the HTML parser in a
  non-functional state after parsing a severly broken document.

* ``marque`` tag in HTML cleanup code is correctly named ``marquee``.

Other changes
--------------

* Some public functions in the Cython-level C-API have more explicit
  return types.


2.3beta1 (2010-09-06)
=====================

Features added
--------------

Bugs fixed
----------

* Crash in newer libxml2 versions when moving elements between
  documents that had attributes on replaced XInclude nodes.

* ``XMLID()`` function was missing the optional ``parser`` and
  ``base_url`` parameters.

* Searching for wildcard tags in ``iterparse()`` was broken in Py3.

* ``lxml.html.open_in_browser()`` didn't work in Python 3 due to the
  use of os.tempnam.  It now takes an optional 'encoding' parameter.

Other changes
--------------


2.3alpha2 (2010-07-24)
======================

Features added
--------------

Bugs fixed
----------

* Crash in XSLT when generating text-only result documents with a
  stylesheet created in a different thread.

Other changes
--------------

* ``repr()`` of Element objects shows the hex ID with leading 0x
  (following ElementTree 1.3).


2.3alpha1 (2010-06-19)
======================

Features added
--------------

* Keyword argument ``namespaces`` in ``lxml.cssselect.CSSSelector()``
  to pass a prefix-to-namespace mapping for the selector.

* New function ``lxml.etree.register_namespace(prefix, uri)`` that
  globally registers a namespace prefix for a namespace that newly
  created Elements in that namespace will use automatically.  Follows
  ElementTree 1.3.

* Support 'unicode' string name as encoding parameter in
  ``tostring()``, following ElementTree 1.3.

* Support 'c14n' serialisation method in ``ElementTree.write()`` and
  ``tostring()``, following ElementTree 1.3.
